src/styles/style.css
/* ... */
#toggl-button-edit-form {
  position: absolute;
  width: 260px !important;
  max-width: 240px;
  padding: 10px !important;
  -webkit-box-shadow: 0 1px 3px rgba(128,128,128,.5);
  -moz-box-shadow: 0 1px 3px rgba(128,128,128,.5);
  box-shadow: 0 1px 3px rgba(128,128,128,.5);
  -webkit-border-radius: 3px;
  border-radius: 3px;
  background-color: #f5f5f5;
  z-index: 999999;
  box-sizing: border-box;
}

#toggl-button-edit-form .toggl-button{
  margin: 0 !important;
  border: none !important;
  visibility: visible !important;
}

#toggl-button-edit-form .toggl-button:hover{
  background-color: transparent;
}

#toggl-button-edit-form .toggl-button-row {
  margin: 0;
  padding: 0;
  padding-top: 10px;
}

#toggl-button-edit-form .toggl-button-row label {
  display: block;
  font-size: 13px;
  height: 20px;
}

#toggl-button-edit-form .toggl-button-input {
  background: #f5f5f5;
  border: 1px solid #e1e1e1;
  font-size: 0.7em;  
  padding: 0 10px;
  width: 220px;
}

#toggl-button-edit-form .toggl-button-text {
  float:left;
  width: 186px;
  height: 40px;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

#toggl-button-edit-form #toggl-button-project-placeholder,
#toggl-button-edit-form #toggl-button-tag-placeholder,
#toggl-button-edit-form #toggl-button-description,
#toggl-button-edit-form #toggl-button-project {
  height: 40px !important;
  line-height: 40px;
  vertical-align: middle;
  border: none;
  outline: none;
  box-shadow: none;
  border-radius: 0;
  background-color: #ffffff;
  font-size: 14px;
}

#toggl-button-edit-form #toggl-button-project-placeholder,
#toggl-button-edit-form #toggl-button-tag-placeholder {
  color: #8a8989;
  cursor: pointer;
}

#toggl-button-edit-form #toggl-button-project-placeholder span,
#toggl-button-edit-form #toggl-button-tag-placeholder span {
  float: right;
  color: #abaaaa;
  cursor: pointer;
}

#toggl-button-edit-form #toggl-button-project,
#toggl-button-edit-form #toggl-button-tag {
  visibility: hidden;
  position: absolute;
}

#toggl-button-description, #toggl-button-project, #toggl-button-tag {
  font-size: 13px !important;
  margin: 0 !important;
  padding: 0 10px !important;
  width: 100% !important;
  box-sizing :border-box !important;
}

#toggl-button-edit-form #toggl-button-tag {
  display: none;
  visibility: visible;
  background: #ffffff;
  max-width: 220px;
  position: absolute;
  margin-top: 40px!important;
  height: 100px!important;
  z-index: 1;
}

#toggl-button-edit-form #toggl-button-update {
  font-weight: 200;
  font-size: 16px;
  width: 110px;
  height: 34px;
  line-height: 34px;
  vertical-align: middle;
  margin-left: 55px;
  margin-top: 15px;
  text-transform: uppercase;
  color: white;
  display: inline-block;
  background-color: #80d364;
  border: none;
  cursor: pointer;
  font-family: inherit;
  text-align: center;
}

#toggl-button-edit-form #toggl-button-update:before {
  border-color: rgba(0,0,0,0.5);
  direction: ltr;
  content: '\2713';
  margin-left: 0;
  font-size: 20px;
  position: relative;
  color: #fff;
  top: 0;
  font-weight: 200;
  left: -8px;
}

#toggl-button-edit-form #toggl-button-hide{
  float: right;
  background: transparent;
  border: none;
  color: #6a7479;
  font-family: fantasy;
  font-size: 18px;
}

/********* PIVOTAL *********/
.toggl-button.pivotal {
  margin-top: 10px;
}

/********* BITBUCKET *********/
.toggl-button.bitbucket {
  border-color: #ccc;
  margin-left:15px;
}

/********* GITHUB *********/
.toggl-button.github {
  padding-left: 21px;
  margin-left: 5px;
}

/********* YOUTRACK *********/
.toggl-button.youtrack {
  float: right;
}

/********* ASANA *********/
.toggl-button.asana {
  margin-left: 52px;
  margin-bottom: 5px;
  color: #596573;
  line-height: 22px;
  font-size: 12px;
  font-weight: 600;
}

/********* PODIO *********/
.toggl-button.podio {
  width: 65px;
  margin-left: 4px;
}

/********* GITLAB *********/
.toggl-button.gitlab {
  font-size: 75%;
  margin-left: 8px;
  padding-left: 21px;
}

/********* JIRA *********/
.toggl-button.jira {
  margin-top:.2em;
}

/********* UNFUDDLE *********/
.toggl-button.unfuddle {
  margin-left: 4px;
  line-height: 18px;
  padding-left: 18px;
  background-size: 16px;
}

/********* TRELLO *********/
.toggl-button.trello {
  text-decoration: none;
  cursor: pointer;
  color: #737373;
}

.checklist-item-button {
  position: absolute;
  top: 2px;
  right: 0;
}

.checklist-item-details-text {
  max-width: 94%;
}

/********* BASECAMP *********/
.toggl-button.basecamp {
  font-size: 12px;
  height: 14px;
  margin-left: 3px;
  line-height: 14px;
  padding-left: 19px;
  background-size: 17px;
  visibility: hidden;
}

/********* TEAMWEEK *********/
.toggl-button.teamweek-new {
  color: rgba(47,47,47,0.8);
  margin: 12px;
  margin-top: 18px;
  position: absolute;
  z-index: 9999999;
}

#toggl-button-edit-form .toggl-button.teamweek-new {
  position: static;
}

/********* PRODUCTEEV *********/
.toggl-button.producteev {
  margin-left: 12px;
  margin-bottom: 2px;
}

/********* REDBOOTH *********/
.toggl-button.redbooth {
  font-size: 12px;
  line-height: 16px;
  padding-left: 18px;
  background-size: 16px;
}

/********* WORKSECTION *********/
#tmenu2 .toggl-button.worksection {
  margin-top: 9px;
  padding-top: 0px;
  line-height: 21px;
  padding-left: 21px;
}

/********* SIFTER *********/
.toggl-button.sifterapp {
  color: white;
  float: right;
}

.toggl-button.sifterapp.active {
  color: rgb(52, 255, 125) !important;
}

/********* GOOGLE DOCS *********/
.toggl-button.google-docs {
  background-size: 17px;
  padding-left: 19px;
}

.toggl-button.google-docs.min {
  margin-bottom: -10px;
  margin-left: 5px;
}

/********* REDMINE *********/
.toggl-button.redmine {
  float: right;
  font-size: .8em;
  font-weight: normal;
  margin-top: 4px;
}

/********* CAPSULECRM *********/
.toggl-button.capsule {
  line-height: 15px;
  background-position: 7% 40%;
  padding-left: 30px !important;
}
/* ... */

